--- a/src/assets/style/common.less
+++ b/src/assets/style/common.less
@@ -27,7 +27,6 @@ button,input{
 }
 body{
   width: 100%;
-  min-width: 1220px;
   font-size: 14px;
   line-height: 1.42857143;
   color: #19191D;
@@ -119,6 +118,10 @@ select:focus,select:active,select:hover{
 
 .mt40 {
   margin-top: 40px;
+}
+
+.no-scroll {
+  position: fixed;
 }
 
 @font-face {
