--- a/src/assets/style/common.less
+++ b/src/assets/style/common.less
@@ -125,6 +125,12 @@ select:focus,select:active,select:hover{
   position: fixed;
 }
 
+.img-object {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @font-face {
   font-family: 'font-medium';
   src: url('../fonts/DIN-Medium.otf') format('opentype');
